# vibe_clock

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.githooks/: pre-commit
.specify/memory/: constitution.md
specs/001-task-time-journal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-task-time-journal/checklists/: requirements.md
specs/001-task-time-journal/contracts/: cli-commands.md
specs/002-pdf-report-export/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-pdf-report-export/checklists/: requirements.md
specs/002-pdf-report-export/contracts/: cli-commands.md
specs/003-time-input-format/: plan.md  research.md  spec.md  tasks.md
specs/003-time-input-format/checklists/: requirements.md
specs/003-time-input-format/contracts/: cli-commands.md
specs/004-report-layout/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-report-layout/checklists/: requirements.md
specs/004-report-layout/contracts/: report-command.md
src/: clock_trait.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs
src/cli/: clock.rs  journal.rs  mod.rs  project.rs  report.rs  task.rs
src/db/: clock_state.rs  mod.rs  project.rs  task_entry.rs
src/formatting/: duration.rs  mod.rs
src/models/: clock_state.rs  mod.rs  project.rs  task_entry.rs
src/services/: clock.rs  journal.rs  mod.rs  pdf.rs  project.rs  report.rs  task.rs
src/tui/: mod.rs
tests/: bench.rs  cli_clock.rs  cli_journal.rs  cli_project.rs  cli_report.rs  cli_task.rs  crypto_test.rs  edge_cases.rs
tests/common/: mod.rs
