[package]
name = "vibe-clock"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
